[package]
name = "solar-push"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
chrono-tz = "0.6.3"
clap = { version = "3.2.16", features = ["derive"] }

[dependencies.curl]
version = "0.4.44"
features = ["static-curl", "static-ssl"]

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled", "array"]
